--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/node": "^22.1.0",
     "@types/web3": "^1.2.2",
     "nodemon": "^3.1.4",
+    "prisma": "^5.18.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
